--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <div class="bucket img2 center">욱콩아콩 자가 마련하기</div>
         <div class="bucket img1-t4 center">안정적인 직장에 이직하기</div>
         <div class="bucket img1 center">제2외국어 공부하기</div>
-        <div class="bucket img2-t5 center">건강한 음식 먹기</div>
+        <div class="bucket img2-t5 center done">건강한 음식 먹기</div>
     </div>
 
 </body>
